--- a/game.project
+++ b/game.project
@@ -16,4 +16,9 @@ input_method = HiddenInputField
 title = LD49
 dependencies#0 = https://github.com/britzl/defold-orthographic/archive/refs/tags/3.1.3.zip
 dependencies#1 = https://github.com/selimanac/defold-astar/archive/refs/tags/v1.0.1.zip
+dependencies#2 = https://github.com/britzl/defold-input/archive/refs/tags/4.3.0.zip
+
+[graphics]
+default_texture_min_filter = nearest
+default_texture_mag_filter = nearest
 
